# P10-SoftdeskAPI

./: .gitignore  README.MD  pyproject.toml  requirements.txt
.github/: dependabot.yml
authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_customuser_age.py  0003_remove_customuser_age_customuser_date_of_birth.py  0004_alter_customuser_date_of_birth.py
config/: settings.py  urls.py
projects/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py
tracking/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
tracking/migrations/: 0001_initial.py  0002_rename_assignee_issue_assigned_to.py
tracking_projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
tracking_projects/migrations/: 0001_initial.py  0002_alter_project_description.py  0003_alter_comment_options_alter_contributor_options_and_more.py
