[project]
name = "projet-10"
version = "0.1.0"
description = "API - SoftDesk"
readme = "README.MD"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "django==5.2.8",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-nested-routers==0.95.0",
    "pyjwt==2.10.1",
    "sqlparse==0.5.3",
]

